samples/_failures_safe/1761209892_c2f31c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21865f54.c: In function ‘main’:
./samples/SAFE/__tmp_21865f54.c:120: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_21865f54.c:119:5: error: expected declaration or statement at end of input
  119 |     for
      |     ^~~
